--- a/SWIDEA_SITE/static/detail.css
+++ b/SWIDEA_SITE/static/detail.css
@@ -34,7 +34,7 @@ body {
 /* 내용 */
 .idea-detail-content {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-between;
     margin-bottom: 20px;
 }
