--- a/SWIDEA_SITE/templates/list.html
+++ b/SWIDEA_SITE/templates/list.html
@@ -15,13 +15,27 @@
 </section>
 
 <div class="sort-button">
-    <button class="dropdown-btn">정렬 기준</button>
+    <button class="dropdown-btn">
+        {% if sort_option == "liked" %}
+            찜하기순
+        {% elif sort_option == "name_asc" %}
+            이름순
+        {% elif sort_option == "oldest" %}
+            등록순
+        {% elif sort_option == "newest" %}
+            최신순
+        {% elif sort_option == "popularity" %}
+            관심도순
+        {% else %}
+            정렬 기준
+        {% endif %}
+    </button>
     <ul class="dropdown-menu">
-        <li><a href="?sort=popularity">관심도순</a></li>
-        <li><a href="?sort=newest">최신순</a></li>
-        <li><a href="?sort=oldest">오래된순</a></li>
+        <li><a href="?sort=liked">찜하기순</a></li>
         <li><a href="?sort=name_asc">이름순</a></li>
-        <li><a href="?sort=name_desc">이름역순</a></li>
+        <li><a href="?sort=oldest">등록순</a></li>
+        <li><a href="?sort=newest">최신순</a></li>
+        <li><a href="?sort=popularity">관심도순</a></li>
     </ul>
 </div>
 
@@ -77,7 +91,7 @@
     {% endif %}
 </div>
 <script>
-    const csrfToken = '{{ csrf_token }}'; // CSRF 토큰 설정
+    const csrfToken = '{{ csrf_token }}';
 </script>
-<script src="{% static 'js/like.js' %}"></script> <!-- 외부 스크립트 로드 -->
+<script src="{% static 'js/like.js' %}"></script>
 {% endblock %}
