--- a/piro22_Ajax_Pirostagram/templates/profile.html
+++ b/piro22_Ajax_Pirostagram/templates/profile.html
@@ -1,133 +1,146 @@
-{% extends 'base.html' %}
-
 {% load static %}
 
-{% block extra_css %}
-<link rel="stylesheet" href="{% static 'css/profile.css' %}">
-{% endblock %}
 
-{% block content %}
-<main>
-    <section class="profile">
-        <div class="profile__image">
-            <img src="{% static 'assets/images/profilePicture.png' %}" alt="프로필 사진" />
-        </div>
-        <div class="profile__data">
-            <div class="profile__data-item">
-                <div class="profile__data-number">{{ boards|length }}</div>
-                <div class="profile__data-type">Posts</div>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Pirostagram</title>
+        <link rel="stylesheet" href="{% static 'css/reset.css' %}">
+        <link rel="stylesheet" href="{% static 'css/base.css' %}">
+        <link rel="stylesheet" href="{% static 'css/profile.css' %}">
+    
+    </head>
+    <body>
+      <div class="container">
+      <header class="header">
+          <button>
+          <img src="{% static 'assets/icons/goBack.svg' %}" alt="뒤로 가기 버튼">
+          </button>
+          <div class="header__username">Pirogramming</div>
+          <div class="header__rightButtons">
+          <button><img src="{% static 'assets/icons/alarm.svg' %}" alt="알림 버튼"></button>
+          <button><img src="{% static 'assets/icons/more.svg' %}" alt="더보기 버튼"></button>
+          </div>
+      </header>
+      <main>
+          <section class="profile">
+              <div class="profile__image">
+                  <img src="{% static 'assets/images/profilePicture.png' %}" alt="프로필 사진" />
+              </div>
+              <div class="profile__data">
+                  <div class="profile__data-item">
+                      <div class="profile__data-number">{{ boards|length }}</div>
+                      <div class="profile__data-type">Posts</div>
+                  </div>
+                  <div class="profile__data-item">
+                      <div class="profile__data-number">5,678</div>
+                      <div class="profile__data-type">Followers</div>
+                  </div>
+                  <div class="profile__data-item">
+                      <div class="profile__data-number">9,101</div>
+                      <div class="profile__data-type">Following</div>
+                  </div>
+              </div>
+          </section>
+          <section class="userInfo">
+            <div>
+              <div class="userInfo__username">Pirogramming</div>
+              <div class="userInfo__category">컴퓨터 회사</div>
+              <div class="userInfo__description">
+                프로그래밍의 첫 걸음, 피로그래밍
+              </div>
             </div>
-            <div class="profile__data-item">
-                <div class="profile__data-number">5,678</div>
-                <div class="profile__data-type">Followers</div>
+            <button class="userInfo__follow">Follow</button>
+          </section>
+          <aside class="highlights">
+            <div class="highlights__item">
+              <button class="highlights__item-image">
+                <img
+                  src="{% static 'assets/images/profilePicture.png' %}"
+                  alt="하이라이트 보기"
+                />
+              </button>
+              <div class="highlights_item-title">Title</div>
             </div>
-            <div class="profile__data-item">
-                <div class="profile__data-number">9,101</div>
-                <div class="profile__data-type">Following</div>
+          </aside>
+          <section class="posts">
+            <nav class="posts__tabBar">
+              <div class="posts__tab posts__tab--selected">1</div>
+              <div class="posts__tab">2</div>
+              <div class="posts__tab">3</div>
+            </nav>
+            <article class="posts__contents">
+              {% for board in boards %}
+              <div class="posts__photo">
+                  <a href="{% url 'board:detail_page' board.pk %}">
+                      {% if board.image %}
+                          <img src="{{ board.image.url }}" alt="게시물 이미지">
+                      {% else %}
+                          <img src="{% static 'assets/images/defaultImage.png' %}" alt="기본 이미지">
+                      {% endif %}
+                  </a>
+              </div>
+              {% endfor %}
+          </article>
+          </section>
+      </main>
+      <footer class="footer_nav">
+        <button class="navBar">
+            <img src="{% static 'assets/icons/집_기본.svg' %}" 
+                data-default-src="{% static 'assets/icons/집_기본.svg' %}" 
+                data-selected-src="{% static 'assets/icons/집_터치.svg' %}" 
+                alt="집">
+        </button>
+        <button class="navBar">
+            <img src="{% static 'assets/icons/돋보기_기본.svg' %}" 
+                data-default-src="{% static 'assets/icons/돋보기_기본.svg' %}" 
+                data-selected-src="{% static 'assets/icons/돋보기_터치.svg' %}" 
+                alt="돋보기">
+        </button>
+        <button class="navBar">
+            <a href="{% url 'board:upload_page' %}">
+                <img src="{% static 'assets/icons/post.svg' %}" 
+                    data-default-src="{% static 'assets/icons/post.svg' %}" 
+                    data-selected-src="{% static 'assets/icons/post.svg' %}" 
+                    alt="게시물 작성">
+            </a>
+        </button>
+        <button class="navBar">
+            <img src="{% static 'assets/icons/릴스_기본.png' %}" 
+                data-default-src="{% static 'assets/icons/릴스_기본.png' %}" 
+                data-selected-src="{% static 'assets/icons/릴스_터치.png' %}" 
+                alt="릴스">
+        </button>
+        <button class="navBar navBar--selected">
+            <div class="nav_profile__image">
+                <img src="{% static 'assets/images/profilePicture.png' %}"
+                data-default-src="{% static 'assets/images/profilePicture.png' %}"
+                data-selected-src="{% static 'assets/images/profilePicture.png' %}"
+                alt="프로필 사진" />
             </div>
-        </div>
-    </section>
-    <section class="userInfo">
-      <div>
-        <div class="userInfo__username">Pirogramming</div>
-        <div class="userInfo__category">컴퓨터 회사</div>
-        <div class="userInfo__description">
-          프로그래밍의 첫 걸음, 피로그래밍
-        </div>
-      </div>
-      <button class="userInfo__follow">Follow</button>
-    </section>
-    <aside class="highlights">
-      <div class="highlights__item">
-        <button class="highlights__item-image">
-          <img
-            src="{% static 'assets/images/profilePicture.png' %}"
-            alt="하이라이트 보기"
-          />
         </button>
-        <div class="highlights_item-title">Title</div>
-      </div>
-      <div class="highlights__item">
-        <button class="highlights__item-image">
-          <img
-            src="{% static 'assets/images/profilePicture.png' %}"
-            alt="하이라이트 보기"
-          />
-        </button>
-        <div class="highlights_item-title">Title</div>
-      </div>
-      <div class="highlights__item">
-        <button class="highlights__item-image">
-          <img
-            src="{% static 'assets/images/profilePicture.png' %}"
-            alt="하이라이트 보기"
-          />
-        </button>
-        <div class="highlights_item-title">Title</div>
-      </div>
-      <div class="highlights__item">
-        <button class="highlights__item-image">
-          <img
-            src="{% static 'assets/images/profilePicture.png' %}"
-            alt="하이라이트 보기"
-          />
-        </button>
-        <div class="highlights_item-title">Title</div>
-      </div>
-      <div class="highlights__item">
-        <button class="highlights__item-image">
-          <img
-            src="{% static 'assets/images/profilePicture.png' %}"
-            alt="하이라이트 보기"
-          />
-        </button>
-        <div class="highlights_item-title">Title</div>
-      </div>
-      <div class="highlights__item">
-        <button class="highlights__item-image">
-          <img
-            src="{% static 'assets/images/profilePicture.png' %}"
-            alt="하이라이트 보기"
-          />
-        </button>
-        <div class="highlights_item-title">Title</div>
-      </div>
-      <div class="highlights__item">
-        <button class="highlights__item-image">
-          <img
-            src="{% static 'assets/images/profilePicture.png' %}"
-            alt="하이라이트 보기"
-          />
-        </button>
-        <div class="highlights_item-title">Title</div>
-      </div>
-      <div class="highlights__item">
-        <button class="highlights__item-image">
-          <img
-            src="{% static 'assets/images/profilePicture.png' %}"
-            alt="하이라이트 보기"
-          />
-        </button>
-        <div class="highlights_item-title">Title</div>
-      </div>
-    </aside>
-    <section class="posts">
-      <nav class="posts__tabBar">
-        <div class="posts__tab posts__tab--selected">1</div>
-        <div class="posts__tab">2</div>
-        <div class="posts__tab">3</div>
-      </nav>
-      <article class="posts__contents">
-        {% for board in boards %}
-            <div class="posts__photo">
-                {% if board.image %}
-                    <img src="{{ board.image.url }}" alt="게시물 이미지">
-                {% else %}
-                    <img src="{% static 'assets/images/defaultImage.png' %}" alt="기본 이미지">
-                {% endif %}
-            </div>
-        {% endfor %}
-    </article>
-    </section>
-</main>
-{% endblock %}
+    </footer>
+    
+
+    </div>
+    <script>
+        const navButtons = document.querySelectorAll('footer .navBar');
+    
+        navButtons.forEach(button => {
+            button.addEventListener('click', () => {
+                document.querySelectorAll('footer .navBar--selected').forEach(selected => {
+                    selected.classList.remove('navBar--selected');
+                    const img = selected.querySelector('img');
+                    img.src = img.getAttribute('data-default-src');
+                });
+    
+                button.classList.add('navBar--selected');
+                const img = button.querySelector('img');
+                img.src = img.getAttribute('data-selected-src');
+            });
+        });
+    </script>
+</body>
+</html>
