[feat] 좋아요 기능 완성

--- a/piro22_Ajax_Pirostagram/static/css/detail.css
+++ b/piro22_Ajax_Pirostagram/static/css/detail.css
@@ -74,6 +74,11 @@ main {
     font-size: 16px;
 }
 
+.like-button svg{
+    width: 16px;
+    height: 16px;
+}
+
 .like-count {
     margin-bottom: 2px;
     display: inline-flex;
