--- a/piro22_Ajax_Pirostagram/templates/detail.html
+++ b/piro22_Ajax_Pirostagram/templates/detail.html
@@ -43,10 +43,11 @@
                             </div>
                             
                             <div>
-                                <a href="">
+                                <a href="{% url 'comment:comment_page_with_pk' post.id %}">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat" viewBox="0 0 16 16">
                                         <path d="M2.678 11.894a1 1 0 0 1 .287.801 11 11 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8 8 0 0 0 8 14c3.996 0 7-2.807 7-6s-3.004-6-7-6-7 2.808-7 6c0 1.468.617 2.83 1.678 3.894m-.493 3.905a22 22 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a10 10 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9 9 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105"/>
                                     </svg>
+                                    <span class="comment-count">{{ comments_count }}</span>
                                 </a>
                             </div>
                             <div class="send_button">
@@ -66,9 +67,9 @@
                         <span class="username">username</span>
                         <span>content</span>
                     </div>
-                    <div class="comments-disabled">
-                        댓글 기능이 해제되었습니다. <a href="#">관리 기능 검토</a>.
-                    </div>
+                    <a class="comments" href="{% url 'comment:comment_page_with_pk' post.id %}">
+                        댓글 모두 보기
+                    </a>
                     <div class="date">{{ post.created_at }}</div>
                 </div>
             </main>
@@ -112,60 +113,8 @@
         
 
         </div>
-        <script>
-            const navButtons = document.querySelectorAll('footer .navBar');
-        
-            navButtons.forEach(button => {
-                button.addEventListener('click', () => {
-                    document.querySelectorAll('footer .navBar--selected').forEach(selected => {
-                        selected.classList.remove('navBar--selected');
-                        const img = selected.querySelector('img');
-                        img.src = img.getAttribute('data-default-src');
-                    });
-        
-                    button.classList.add('navBar--selected');
-                    const img = button.querySelector('img');
-                    img.src = img.getAttribute('data-selected-src');
-                });
-            });
-
-        </script>
-
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-        <script>
-            const onClickLike = async (id, type) => {
-                const url = '/like_post/';
-                const csrfToken = document.getElementById('csrf-token').value;
-        
-                try {
-                    const response = await axios.post(
-                        url,
-                        { id, type },
-                        {
-                            headers: {
-                                'Content-Type': 'application/json',
-                                'X-CSRFToken': csrfToken,
-                            },
-                        }
-                    );
-        
-                    if (response.status === 200) {
-                        likeHandleResponse(response.data.id, response.data.type);
-                    } else {
-                        console.error('서버 응답 오류:', response);
-                    }
-                } catch (error) {
-                    console.error('좋아요 요청 중 오류 발생:', error);
-                }
-            };
-        
-            const likeHandleResponse = (id, type) => {
-                const element = document.querySelector(`.like-button[data-post-id="${id}"] .like-count`);
-                if (element) {
-                    const currentCount = Number(element.innerText);
-                    element.innerText = currentCount + 1;
-                }
-            };
-        </script>
+        <script src="{% static 'js/navigation.js' %}"></script>
+        <script src="{% static 'js/likeHandler.js' %}"></script>
     </body>
 </html>
