[feat] 게시물 댓글 기능 추가 - 게시글 삭제, 수정 기능 - 댓글 삭제 기능

--- a/piro22_Ajax_Pirostagram/static/css/comment.css
+++ b/piro22_Ajax_Pirostagram/static/css/comment.css
@@ -37,6 +37,8 @@
     margin-bottom: var(--padding-sm);
     padding-bottom: var(--padding-sm);
     border-bottom: 1px solid var(--gray);
+    display: flex;
+    justify-content: space-between;
 }
 
 .comment-username {
@@ -79,4 +81,8 @@
     border: none;
     border-radius: 4px;
     cursor: pointer;
+}
+
+.delete-button button{
+    color: var(--white);
 }
