--- a/piro22_Ajax_Pirostagram/templates/detail.html
+++ b/piro22_Ajax_Pirostagram/templates/detail.html
@@ -2,125 +2,120 @@
 
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Pirostagram</title>
-        <link rel="stylesheet" href="{% static 'css/reset.css' %}">
-        <link rel="stylesheet" href="{% static 'css/base.css' %}">
-        <link rel="stylesheet" href="{% static 'css/detail.css' %}">
-    
-    </head>
-    <body>
-        <div class="container">
-            <input type="hidden" id="csrf-token" value="{{ csrf_token }}">
-            <!-- Header -->
-            <div class="header">
-                <div class="left_button">
-                    <a href="{% url 'board:profile_page' %}" class="back-button">&lt;</a>
-                    <div>
-                    <h1 class="username">username</h1>
-                    <span class="location">{{ post.location }}</span>
-                    </div>
-                </div>
-                <div class="menu-button">•••</div>
-                <div class="dropdown-menu hidden" id="dropdown-menu">
-                    <a>수정</a>
-                    <a>삭제</a>
-                </div>
-            </div>
-            <main>
-                <!-- Post Content -->
-                <div class="post-content">
-                    <img src="{{ post.image.url }}" alt="Post Image" class="post-image">
-                </div>
-
-                <!-- Actions -->
-                <div class="actions">
-                    <div class="detail_buttons">
-                        <div class="detail_left_buttons">
-                            <div class="like-button" data-post-id="{{ post.id }}" onclick="onClickLike({{ post.id }}, 'like')">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="like-icon" width="24" height="24" fill="currentColor" viewBox="0 0 16 16">
-                                    <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
-                                </svg>
-                                <span class="like-count">{{ post.like }}</span>
-                            </div>
-                            
-                            <div>
-                                <a href="{% url 'comment:comment_page_with_pk' post.id %}">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat" viewBox="0 0 16 16">
-                                        <path d="M2.678 11.894a1 1 0 0 1 .287.801 11 11 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8 8 0 0 0 8 14c3.996 0 7-2.807 7-6s-3.004-6-7-6-7 2.808-7 6c0 1.468.617 2.83 1.678 3.894m-.493 3.905a22 22 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a10 10 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9 9 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105"/>
-                                    </svg>
-                                    <span class="comment-count">{{ comments_count }}</span>
-                                </a>
-                            </div>
-                            <div class="send_button">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-send" viewBox="0 0 16 16">
-                                    <path d="M15.854.146a.5.5 0 0 1 .11.54l-5.819 14.547a.75.75 0 0 1-1.329.124l-3.178-4.995L.643 7.184a.75.75 0 0 1 .124-1.33L15.314.037a.5.5 0 0 1 .54.11ZM6.636 10.07l2.761 4.338L14.13 2.576zm6.787-8.201L1.591 6.602l4.339 2.76z"/>
-                                </svg>
-                            </div>
-                        </div>
-                        <div class="mark_button">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bookmark" viewBox="0 0 16 16">
-                                <path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1z"/>
-                            </svg>
-                        </div>
-                    </div>
-                    <div class="likes">{{ post.like }}명이 좋아합니다.</div>
-                    <div class="caption">
-                        <span class="username">username</span>
-                        <span>content</span>
-                    </div>
-                    <a class="comments" href="{% url 'comment:comment_page_with_pk' post.id %}">
-                        댓글 모두 보기
-                    </a>
-                    <div class="date">{{ post.created_at }}</div>
-                </div>
-            </main>
-
-            <footer class="footer_nav">
-                <button class="navBar">
-                    <img src="{% static 'assets/icons/집_기본.svg' %}" 
-                        data-default-src="{% static 'assets/icons/집_기본.svg' %}" 
-                        data-selected-src="{% static 'assets/icons/집_터치.svg' %}" 
-                        alt="집">
-                </button>
-                <button class="navBar">
-                    <img src="{% static 'assets/icons/돋보기_기본.svg' %}" 
-                        data-default-src="{% static 'assets/icons/돋보기_기본.svg' %}" 
-                        data-selected-src="{% static 'assets/icons/돋보기_터치.svg' %}" 
-                        alt="돋보기">
-                </button>
-                <button class="navBar">
-                    <a href="{% url 'board:upload_page' %}">
-                        <img src="{% static 'assets/icons/post.svg' %}" 
-                            data-default-src="{% static 'assets/icons/post.svg' %}" 
-                            data-selected-src="{% static 'assets/icons/post.svg' %}" 
-                            alt="게시물 작성">
-                    </a>
-                </button>
-                <button class="navBar">
-                    <img src="{% static 'assets/icons/릴스_기본.png' %}" 
-                        data-default-src="{% static 'assets/icons/릴스_기본.png' %}" 
-                        data-selected-src="{% static 'assets/icons/릴스_터치.png' %}" 
-                        alt="릴스">
-                </button>
-                <button class="navBar navBar--selected">
-                    <a href="{% url 'board:profile_page' %}">
-                        <div class="nav_profile__image">
-                            <img src="{% static 'assets/images/profilePicture.png' %}"
-                            data-default-src="{% static 'assets/images/profilePicture.png' %}"
-                            data-selected-src="{% static 'assets/images/profilePicture.png' %}"
-                            alt="프로필 사진" />
-                        </div>
-                    </a>
-                </button>
-            </footer>
-        
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Pirostagram</title>
+    <link rel="stylesheet" href="{% static 'css/reset.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/base.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/detail.css' %}" />
+  </head>
+  <body>
+    <div class="container">
+      <input type="hidden" id="csrf-token" value="{{ csrf_token }}" />
+      <!-- Header -->
+      <div class="header">
+        <div class="left_button">
+          <a href="{% url 'board:profile_page' %}" class="back-button">&lt;</a>
+          <div>
+            <h1 class="username">username</h1>
+            <span class="location">{{ post.location }}</span>
+          </div>
         </div>
-        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-        <script src="{% static 'js/nav.js' %}"></script>
-        <script src="{% static 'js/likeHandler.js' %}"></script>
-    </body>
+        <div class="menu-button-container">
+            <div class="menu-button">•••</div>
+            <div class="dropdown-menu hidden" id="dropdown-menu">
+                <a href="{% url 'board:edit_post' post.id %}">수정</a>
+                <form method="POST" action="{% url 'board:delete_post' post.id %}">
+                    {% csrf_token %}
+                    <button type="submit" onclick="return confirm('정말 삭제하시겠습니까?');">
+                        삭제
+                    </button>
+                </form>
+            </div>
+        </div>
+      </div>
+      <main>
+        <!-- Post Content -->
+        <div class="post-content">
+          <img src="{{ post.image.url }}" alt="Post Image" class="post-image" />
+        </div>
+
+        <!-- Actions -->
+        <div class="actions">
+          <div class="detail_buttons">
+            <div class="detail_left_buttons">
+              <div class="like-button" data-post-id="{{ post.id }}" onclick="onClickLike({{ post.id }}, 'like')">
+                <svg xmlns="http://www.w3.org/2000/svg" class="like-icon" width="24" height="24" fill="currentColor" viewBox="0 0 16 16">
+                  <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15" />
+                </svg>
+                <span class="like-count">{{ post.like }}</span>
+              </div>
+
+              <div>
+                <a href="{% url 'comment:comment_page_with_pk' post.id %}">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat" viewBox="0 0 16 16">
+                    <path d="M2.678 11.894a1 1 0 0 1 .287.801 11 11 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8 8 0 0 0 8 14c3.996 0 7-2.807 7-6s-3.004-6-7-6-7 2.808-7 6c0 1.468.617 2.83 1.678 3.894m-.493 3.905a22 22 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a10 10 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9 9 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105" />
+                  </svg>
+                  <span class="comment-count">{{ comments_count }}</span>
+                </a>
+              </div>
+              <div class="send_button">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-send" viewBox="0 0 16 16">
+                  <path d="M15.854.146a.5.5 0 0 1 .11.54l-5.819 14.547a.75.75 0 0 1-1.329.124l-3.178-4.995L.643 7.184a.75.75 0 0 1 .124-1.33L15.314.037a.5.5 0 0 1 .54.11ZM6.636 10.07l2.761 4.338L14.13 2.576zm6.787-8.201L1.591 6.602l4.339 2.76z" />
+                </svg>
+              </div>
+            </div>
+            <div class="mark_button">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bookmark" viewBox="0 0 16 16">
+                <path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1z" />
+              </svg>
+            </div>
+          </div>
+          <div class="likes">{{ post.like }}명이 좋아합니다.</div>
+          <div class="caption">
+            <span class="username">username</span>
+            <span>content</span>
+          </div>
+          <a class="comments" href="{% url 'comment:comment_page_with_pk' post.id %}">댓글 모두 보기</a>
+          <div class="date">{{ post.created_at }}</div>
+        </div>
+      </main>
+
+      <footer class="footer_nav">
+        <button class="navBar"><img src="{% static 'assets/icons/집_기본.svg' %}" data-default-src="{% static 'assets/icons/집_기본.svg' %}" data-selected-src="{% static 'assets/icons/집_터치.svg' %}" alt="집" /></button>
+        <button class="navBar"><img src="{% static 'assets/icons/돋보기_기본.svg' %}" data-default-src="{% static 'assets/icons/돋보기_기본.svg' %}" data-selected-src="{% static 'assets/icons/돋보기_터치.svg' %}" alt="돋보기" /></button>
+        <button class="navBar"><a href="{% url 'board:upload_page' %}"><img src="{% static 'assets/icons/post.svg' %}" data-default-src="{% static 'assets/icons/post.svg' %}" data-selected-src="{% static 'assets/icons/post.svg' %}" alt="게시물 작성" /></a></button>
+        <button class="navBar"><img src="{% static 'assets/icons/릴스_기본.png' %}" data-default-src="{% static 'assets/icons/릴스_기본.png' %}" data-selected-src="{% static 'assets/icons/릴스_터치.png' %}" alt="릴스" /></button>
+        <button class="navBar navBar--selected">
+          <a href="{% url 'board:profile_page' %}">
+            <div class="nav_profile__image">
+              <img src="{% static 'assets/images/profilePicture.png' %}" data-default-src="{% static 'assets/images/profilePicture.png' %}" data-selected-src="{% static 'assets/images/profilePicture.png' %}" alt="프로필 사진" />
+            </div>
+          </a>
+        </button>
+      </footer>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="{% static 'js/nav.js' %}"></script>
+    <script src="{% static 'js/likeHandler.js' %}"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const menuButton = document.querySelector('.menu-button');
+            const dropdownMenu = document.querySelector('#dropdown-menu');
+        
+            menuButton.addEventListener('click', () => {
+                dropdownMenu.classList.toggle('hidden');
+            });
+        
+            // 메뉴 외부 클릭 시 닫기
+            document.addEventListener('click', (event) => {
+                if (!menuButton.contains(event.target) && !dropdownMenu.contains(event.target)) {
+                    dropdownMenu.classList.add('hidden');
+                }
+            });
+        });
+        
+    </script>
+  </body>
 </html>
