--- a/piro22_Ajax_Pirostagram/templates/search.html
+++ b/piro22_Ajax_Pirostagram/templates/search.html
@@ -37,10 +37,10 @@
       </main>
       <footer class="footer_nav">
         <button class="navBar"><img src="{% static 'assets/icons/집_기본.svg' %}" data-default-src="{% static 'assets/icons/집_기본.svg' %}" data-selected-src="{% static 'assets/icons/집_터치.svg' %}" alt="집" /></button>
-        <button class="navBar"><a href="{% url 'board:search_page' %}"><img src="{% static 'assets/icons/돋보기_기본.svg' %}" data-default-src="{% static 'assets/icons/돋보기_기본.svg' %}" data-selected-src="{% static 'assets/icons/돋보기_터치.svg' %}" alt="돋보기" /></a></button>
+        <button class="navBar  navBar--selected"><a href="{% url 'board:search_page' %}"><img src="{% static 'assets/icons/돋보기_기본.svg' %}" data-default-src="{% static 'assets/icons/돋보기_기본.svg' %}" data-selected-src="{% static 'assets/icons/돋보기_터치.svg' %}" alt="돋보기" /></a></button>
         <button class="navBar"><a href="{% url 'board:upload_page' %}"><img src="{% static 'assets/icons/post.svg' %}" data-default-src="{% static 'assets/icons/post.svg' %}" data-selected-src="{% static 'assets/icons/post.svg' %}" alt="게시물 작성" /></a></button>
         <button class="navBar"><img src="{% static 'assets/icons/릴스_기본.png' %}" data-default-src="{% static 'assets/icons/릴스_기본.png' %}" data-selected-src="{% static 'assets/icons/릴스_터치.png' %}" alt="릴스" /></button>
-        <button class="navBar navBar--selected">
+        <button class="navBar">
           <a href="{% url 'board:profile_page' %}">
             <div class="nav_profile__image">
               <img src="{% static 'assets/images/profilePicture.png' %}" data-default-src="{% static 'assets/images/profilePicture.png' %}" data-selected-src="{% static 'assets/images/profilePicture.png' %}" alt="프로필 사진" />
@@ -49,6 +49,10 @@
         </button>
       </footer>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="{% static 'js/nav.js' %}"></script>
+    <script src="{% static 'js/search.js' %}"></script>
+
+    
   </body>
 </html>
